--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title NicoJS
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+    script(src="https://cdn.socket.io/socket.io-1.3.5.js")
+    script(src="scripts/base.js")
     link(rel="stylesheets",href="static/css/global.css")
-    script(src="static/js/global.js")
   body
-    p.test
+    #container
