--- a/index.jade
+++ b/index.jade
@@ -6,5 +6,5 @@ html
     script(src="https://cdn.socket.io/socket.io-1.3.5.js")
     script(src="scripts/base.js")
     link(rel="stylesheets",href="static/css/global.css")
-  body
+  body(style="background-color: rgba(0,0,0,.8)")
     #container
