--- a/index.jade
+++ b/index.jade
@@ -3,8 +3,7 @@ html
   head
     title NicoJS
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
-    script(src="https://cdn.socket.io/socket.io-1.3.5.js")
     script(src="scripts/base.js")
-    link(rel="stylesheets",href="static/css/global.css")
-  body(style="background-color: rgba(0,0,0,.8)")
-    #container
+    link(rel="stylesheet",href="static/css/global.css")
+  body(style="height: 100%")
+    #container(style="width: 100%; height: 100%; background-image: url(static/images/background.jpg); background-size: cover;")
