--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,7 @@ html
   head
     title NicoJS
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
-    script(src="scripts/base.js")
-    link(rel="stylesheet",href="static/css/global.css")
+    script(src="js/base.js")
+    link(rel="stylesheet",href="css/global.css")
   body(style="height: 100%")
-    #container(style="width: 100%; height: 100%; background-image: url(static/images/background.jpg); background-size: cover;")
+    #container(style="width: 100%; height: 100%; background-image: url(images/background.jpg); background-size: cover;")
